--- a/app/static/style/aboutus.css
+++ b/app/static/style/aboutus.css
@@ -9,7 +9,13 @@
 /* h1, h3 {
     font-family: 'Orbitron', sans-serif;
 } */
-
+h1, h2, h3 {
+    font-weight: 700;
+}
+p {
+    font-size: 1rem;
+    line-height: 1.5;
+}
 h3{
     font-size:larger;
 }
@@ -27,6 +33,8 @@ body {
     text-align: center;
 }
 
+
+
 .grid {
     display: flex;
     flex-wrap: wrap;
@@ -41,8 +49,8 @@ body {
     border-radius: 20px;
     margin: 10px;
     box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    width: 90%; /* Adapted for responsiveness */
-    flex-direction: row; /* Horizontal layout */
+    width: 90%; 
+    flex-direction: row; 
     justify-content: space-between;
     align-items: center;
 }
@@ -52,7 +60,7 @@ body {
 }
 
 .card-img {
-    width: 30%; /* Increased width by 10% */
+    width: 30%; 
     height: auto;
     object-fit: cover;
     margin: 10px;
@@ -62,7 +70,8 @@ body {
 .card-content {
     padding: 20px;
     flex: 1;
-    text-align: justify; /* Ensure text justification */
+    /* text-align: justify; Ensure text justification */
+    width:50%;
 }
 
 .card-content h3 {
