--- a/app/templates/aboutus.html
+++ b/app/templates/aboutus.html
@@ -9,48 +9,76 @@
 <body>
 
 <div class="content">
-  <h1>About Us</h1>
   <div class="grid">
-    <!-- Card 1 - Our Goal -->
+    <!-- Card 1 - What We Do -->
     <div class="card flex-row">
         <img src="https://res.cloudinary.com/dynbwiv3t/image/upload/v1714477459/declan-sun-vJF-hGYyFho-unsplash_ajcars.jpg" alt="Our Goal Image" class="card-img">
         <div class="card-content">
-            <h3>Our Goal</h3>
-            <p>At our polls and surveys website, our primary objective is to revolutionize the way data is collected and shared. We strive to create a dynamic platform where users can actively engage in the process of gathering valuable insights and information.</p>
-            <!-- Accordion sections -->
-            <button class="accordion">Empowering Users</button>
-            <div class="panel">
-                <p>We aim to empower users by providing them with the tools and resources needed to create, share, and analyze polls and surveys effortlessly. Through intuitive interfaces and seamless functionality, we encourage users to unleash their creativity and curiosity to address diverse topics and questions.</p>
+            <h3>What We Do</h3>
+            <p>At our polls and surveys website, our primary objective is to revolutionize the way data is collected and shared.<br> We strive to create a dynamic platform where users can actively engage in the process of gathering valuable insights and information.</p>
+            
+            <!-- Section for survey features -->
+            <div class="features">
+                <div class="feature-card">
+                    <h4>Create Custom Surveys</h4>
+                    <p>Whether you're looking to gather opinions, conduct research, or just have fun, our survey builder makes it easy to design surveys tailored to your needs.</p>
+                </div>
+                <div class="feature-card">
+                    <h4>Participate in Surveys</h4>
+                    <p>Explore a wide range of surveys on various topics and share your insights with the community.</p>
+                </div>
+                <div class="feature-card">
+                    <h4>Compete on Leaderboards</h4>
+                    <p>Engage in friendly competition by climbing the leaderboards based on your participation and survey performance.</p>
+                </div>
             </div>
-            <button class="accordion">Facilitating Collaboration</button>
-            <div class="panel">
-                <p>Our goal is to foster a collaborative environment where users can connect, collaborate, and learn from one another. By offering a comprehensive dashboard filled with a myriad of polls and surveys contributed by fellow users, we facilitate knowledge exchange and community-driven exploration.</p>
-            </div>
-            <button class="accordion">Promoting Transparency</button>
-            <div class="panel">
-                <p>Transparency is at the core of our mission. We believe in the importance of sharing survey and poll results openly and transparently. Through our platform, users can not only collect data but also share and visualize the results in a clear and comprehensible manner, fostering transparency and accountability.</p>
-            </div>
-            <!-- End of accordion sections -->
         </div>
-    </div>  
-    <!-- Card 2 - Our Story -->
+    </div>
+     
+    <!-- Card 2 - Why We Do It -->
     <div class="card flex-row-reverse">
         <img src="https://res.cloudinary.com/dynbwiv3t/image/upload/v1714477445/christina-wocintechchat-com-03hBSIiFikE-unsplash_gmg2ha.jpg" alt="Our Story Image" class="card-img">
         <div class="card-content">
-            <h3>Our Story</h3>
-            <p>As a team of four dedicated students, we embarked on this project with a singular vision: to create a platform that not only facilitates easy and efficient data collection but also fosters an environment where shared insights pave the way for collective intelligence. Our website ensures a tailored approach that aligns with our specific academic insights and technical skills.</p>
+            <h3>Why We Do It</h3>
+            <p>Our platform provides users with the tools to:</p>
+            <!-- Section for survey features -->
+            <div class="features">
+                <div class="feature-card">
+                    <h4>Create Custom Surveys</h4>
+                    <p>Whether you're looking to gather opinions, conduct research, or just have fun, our survey builder makes it easy to design surveys tailored to your needs.</p>
+                </div>
+                <div class="feature-card">
+                    <h4>Participate in Surveys</h4>
+                    <p>Explore a wide range of surveys on various topics and share your insights with the community.</p>
+                </div>
+                <div class="feature-card">
+                    <h4>Compete on Leaderboards</h4>
+                    <p>Engage in friendly competition by climbing the leaderboards based on your participation and survey performance.</p>
+                </div>
+            </div>
         </div>
     </div>
+    
+    <div class="card flex-row">
+        <img src="https://res.cloudinary.com/dynbwiv3t/image/upload/v1714477445/christina-wocintechchat-com-03hBSIiFikE-unsplash_gmg2ha.jpg" alt="Our Story Image" class="card-img">
+        <div class="card-content">
+            <h3>Our Values</h3>
+            <p>As a team of four dedicated students, we embarked on this project with a singular vision:<br>
+                 to create a platform that not only facilitates easy and efficient data collection but also fosters an environment where shared insights pave the way for collective intelligence.<br>
+                Our website ensures a tailored approach that aligns with our specific academic insights and technical skills.</p>
+        </div>
+    </div>
+    
     <!-- Card 3 - Contact Us -->
     <div class="card">
         <div class="card-content">
             <h3>Contact Us</h3>
             <div class="contact-us"
-              <p>If you encounter any problems, you can contact us through the following ways and we will help you solve them as soon as possible.</p>
+              <p>Have questions or feedback? We'd love to hear from you! </p>
             </div>
             <!-- Add button -->
             <div class="email-button-container">
-                <button class="email-button" onclick="copyEmail()"><i class="fas fa-envelope"></i> support@survey.com</button>
+                <button class="email-button" onclick="copyEmail()"><i class="fas fa-envelope"></i> surveystream10@gmail.com</button>
             </div>
         </div>
     </div>
