--- a/app/static/style/aboutus.css
+++ b/app/static/style/aboutus.css
@@ -1,108 +1,19 @@
-@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
-
-/* body, h1, h2, h3, p {
-    margin: 0;
-    padding: 0;
-    font-family: 'Arial', sans-serif;
-} */
-
-
-h1, h3 {
-    font-family: 'Arial', sans-serif;
+.section-padding {
+    padding: 60px 0;
 }
 
-body {
-    background-color: #f8f9fa;
-    color: #333;
+.section-bg {
+    background-color: #f9f9f9;
 }
 
-.content {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
-    text-align: center;
+.mission-text, .goal-text {
+    color: #0080b3; 
 }
 
-
-
-.grid {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-around;
-    width: 100%;
-}
-
-.card {
-    display: flex;
-    background: white;
-    border: none;
-    border-radius: 20px;
-    margin: 10px;
-    box-shadow: 0 2px 5px rgba(0,0,0,0.1);
-    width: 90%; 
-    flex-direction: row; 
-
-    justify-content: space-between;
-    align-items: center;
-}
-
-.card.flex-row-reverse {
-    flex-direction: row-reverse;
-}
-
-.card-img {
-    width: 30%; 
-    height: auto;
-    object-fit: cover;
-    margin: 10px;
-    border-radius: 8px;
-}
-
-.card-content {
-    padding: 20px;
-    flex: 1;
-    text-align: justify;
-}
-
-.card-content h3 {
-    text-align: center;
-    margin-bottom: 20px;
-
-}
-
-.contact-us{
-    text-align: center;
-}
-
-.card-content.center {
-    text-align: center;
-}
-
-.accordion {
-    background-color: transparent;
-    color: #444;
-    cursor: pointer;
-    padding: 10px 18px;
-    width: 100%;
-    border: none;
-    text-align: center;
-    outline: none;
-    font-size: 15px;
-    transition: background-color 0.2s ease-out;
-    border-radius: 15px;
-}
-
-.accordion:hover {
-    background-color: #e9ecef;
-}
-
-.panel {
-    background-color: transparent;
-    max-height: 0;
-    overflow: hidden;
-    transition: max-height 0.2s ease-out;
-    padding: 0 18px;
+.email-button-container {
+  display: flex;
+  justify-content: center;
+  margin-top: 10px;
 }
 
 .email-button-container {
@@ -112,7 +23,7 @@ body {
 }
 
 .email-button {
-    background-color: gray;
+    background-color:  #0080b3;
     color: white;
     border: none;
     padding: 10px 20px;
@@ -120,12 +31,12 @@ body {
     text-decoration: none;
     display: inline-block;
     font-size: 16px;
-    margin: 4px 2px;
+    margin: 80px 20px;
     cursor: pointer;
     border-radius: 22px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
 }
 
 .email-button:hover {
-    background-color: lightgray;
+    background-color: #074c67;
 }
